force-app/main/default/objects/ClarifyOpenCase__c/ClarifyOpenCase__c.object-meta.xml
<CustomObject>
    <description>This object will hold read only records of an account&apos;s existing Clarify records. Data will be sourced from Clarify and it will be a one-way integration from Clarify to Salesforce.</description>
    <label>Clarify Open Case</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Clarify Open Case ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarify Open Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>