force-app/main/default/objects/ClarifyOpenCase__c/fields/ClarifySiteID__c.field-meta.xml
<CustomField>
    <fullName>ClarifySiteID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clarify Site ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>