force-app/main/default/objects/ClarifyOpenCase__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>