force-app/main/default/objects/ClarifyOpenCase__c/fields/SiteContactName__c.field-meta.xml
<CustomField>
    <fullName>SiteContactName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>